--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -115,6 +115,13 @@
         "bloc_test",
         "flutter_bloc"
       ]
+    },
+    {
+      "groupName": "flutter_local_notifications",
+      "matchPackageNames": [
+        "flutter_local_notifications",
+        "flutter_local_notifications_platform_interface"
+      ]
     }
   ]
 }
