fix(nextcloud_test_presets): Fix error in installation process
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/Dockerfile
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/Dockerfile
@@ -3,6 +3,9 @@ FROM nextcloud:${SERVER_VERSION} AS nextcloud
 
 WORKDIR /usr/src/nextcloud
 
+# TODO: https://github.com/nextcloud/server/pull/51594
+RUN sed -i "s/ = fileowner/ = @fileowner/" ./occ
+
 ADD pre.sh /tmp
 RUN /tmp/pre.sh
 
