feat(neon_framework,notifications_push_repository): Enable push notifications for linux
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/neon_framework/pubspec.yaml
+++ b/packages/neon_framework/pubspec.yaml
@@ -75,6 +75,8 @@ dependencies:
   sqflite_common_ffi: ^2.3.2
   sqflite_common_ffi_web: ^1.0.0
   timezone: ^0.10.0
+  # TODO: https://codeberg.org/UnifiedPush/flutter-connector/pulls/18
+  unifiedpush_linux: ^0.1.0
   universal_io: ^2.0.0
   url_launcher: ^6.1.4
   vector_graphics: ^1.0.0
