build: Depend on flutter in workspace package to fix renovate
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,5 +33,9 @@ workspace:
   - packages/nextcloud/packages/nextcloud_test
   - packages/nextcloud/packages/nextcloud_test_presets
 
+dependencies:
+  flutter:
+    sdk: flutter
+
 dev_dependencies:
   melos: 6.0.0
