ci: Group build and build_runner dependency upgrades in renovate
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -108,6 +108,13 @@
         "bloc_test",
         "flutter_bloc"
       ]
+    },
+    {
+      "groupName": "build",
+      "matchPackageNames": [
+        "build",
+        "build_runner"
+      ]
     }
   ]
 }
